--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ num-bigint = { git = "https://github.com/gendx/num-bigint.git", branch = "featur
 [features]
 default = ["checked_i64"]
 checked_i64 = []
+log_parallelism = []
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--document-private-items"]
