--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ edition = "2021"
 rust-version = "1.75.0"
 
 [dependencies]
-clap = { version = "=4.4", features = ["derive"] }
-env_logger = "0.10"
+clap = { version = "4.5", features = ["derive"] }
+env_logger = "0.11"
 log = "0.4"
 num = "0.4"
 rayon = "1"
@@ -22,7 +22,7 @@ regex = "1.10"
 
 # Platforms that support `libc::sched_setaffinity()`.
 [target.'cfg(any(target_os = "android", target_os = "dragonfly", target_os = "freebsd", target_os = "linux"))'.dependencies]
-nix = { version = "0.28", features = ["sched"] }
+nix = { version = "0.29", features = ["sched"] }
 
 [dev-dependencies]
 rand = "0.8"
