Add another example that highlights the impact of candidates ranked equally in a ballot.

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -153,6 +153,7 @@ jobs:
     strategy:
       matrix:
         file:
+          - equal_preference/always_behind
           - equal_preference/equal_preference
           - equal_preference/equal_preference_droop
           - equal_preference/equal_preference_equalize
@@ -297,6 +298,7 @@ jobs:
           - bigint/ballot_count_overflows
           - bigint/ballot_sum_overflows
           - bigint/rand_hypergeometric_many
+          - equal_preference/always_behind
           - equal_preference/equal_preference
           - random/rand_2x10
           - random/rand_5x4
